--- a/newsInnerPage5.html
+++ b/newsInnerPage5.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>List of 5 Tech Trends News</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="Styles/newsInnerPage5.css">
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
@@ -94,7 +95,7 @@
                 <p>
                     As per an article by McKinsey & Firm, organizations presenting <br>
                     know-how to gross sales can determine ways in which ship double-<br>
-                    system. This will turn the tables of our society as the world in which
+                    system. This will turn the tables of our society as the world in which <br>
                     digit features in return-on-investment. McKinsey & Firm additional <br>
                     states that automation is achievable in 30% of gross sales actions.
                    
@@ -355,6 +356,13 @@
 
 
       
+   
+
+
+    </div>
+
+
+
     <div class="footer">
         <div class="footer1">
             <img src="./images/logo.jpg" height="80px" width="180px"> <br><br>
@@ -386,8 +394,5 @@
         </div>
     </div>
 
-
-
-    </div>
 </body>
 </html>
