--- a/newsPage.html
+++ b/newsPage.html
@@ -5,13 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>News Home</title>
     <link rel="stylesheet" href="Styles/newsPage.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container">
         
         <div class="navbar">
             <div class="logo">
-            <img src="/images/logo.jpg" height="120px" width="300px">
+            <img src="Images/logo.jpg" style="width: 150px; height: 100;margin-left: 20px;border-radius: 100%;">
             </div>
             <div class="nav">
                 <ul class="links">
