--- a/productInnerpage1.html
+++ b/productInnerpage1.html
@@ -5,30 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="Styles/productInnerpage1.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Product Comparision innerpage for Laptop</title>
 </head>
 <body>
     <div class="container">
         <div class="navbar">
             <div class="logo">
-                <img src="#" height="80px" width="280px">
+                <img src="Images/logo.jpg" style="width: 150px; height:100; border-radius: 100%; margin-left: 20px;">
             </div>
             <div class="nav">
                 <ul class="links">
-                    <li><a href="#">Home</a></li>
+                    <li><a href="home.html">Home</a></li>
                     <li><a href="aboutUs.html">About</a></li>
-                  <li><a href="#">Trending <i class="fa-solid fa-angle-down"></i></a>
+                  <li><a href="trending.html">Trending <i class="fa-solid fa-angle-down"></i></a>
                 <ul class="sub-menu">
-                    <li><a href="#">News</a></li>
-                    <li><a href="#">Reviews</a></li>
-                    <li><a href="#">Tutorials</a></li>
+                    <li><a href="news.html">News</a></li>
+                    <li><a href="reviews.html">Reviews</a></li>
+                    <li><a href="tutorial.html">Tutorials</a></li>
 
                 </ul>
             </li>
-                    <li><a href="#">Contact Us</a></li>
-                    <li><input type=text name="search" placeholder= "     search"><i class="fa-solid fa-magnifying-glass" style="position: relative; padding-left: 160px; padding-top: 6px;"></i></li>
-                 </ul>
-            </div>
+            
+                    <li><a href="contactus.html">Contact Us <i class="fa-solid fa-angle-down"></i></a>
+                    <ul class="sub-menu" style="width: 250px;">
+                        <li><a href="#">Privacy Policy</a></li>
+                        <li><a href="#">Community Forum</a></li>
+                        <li><a href="#">Terms of Services</a></li>
+    
+                    </ul>
+                    </li>
+                      <li><a href="#">Login</a></li>   
+                                  </ul>
+            </div>                                                                                
         </div>
 
 
