--- a/productInnerpage3.html
+++ b/productInnerpage3.html
@@ -5,14 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="Styles/productInnerpage1.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
     <title>Product Comparision innerpage for Laptop</title>
 </head>
 <body>
     <div class="container">
+
         <div class="navbar">
             <div class="logo">
-            <img src="/images/logo.jpg" height="120px" width="300px">
+            <img src="Images/logo.jpg" style="width: 150px; height:100; border-radius: 100%; margin-left: 20px;">
             </div>
             <div class="nav">
                 <ul class="links">
