--- a/termsConditions.html
+++ b/termsConditions.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Terms & Conditions</title>
     <link rel="stylesheet" href="Styles/termsConditions.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="container">
@@ -13,7 +14,7 @@
 
         <div class="navbar">
             <div class="logo">
-            <img src="/images/logo.jpg" height="120px" width="300px">
+            <img src="Images/logo.jpg">
             </div>
             <div class="nav">
                 <ul class="links">
@@ -107,7 +108,7 @@
                 help you meet tomorrow’s challenges?
             </h3>
             <button>
-                <a href="#contact us">Contact Us</a>
+                <a href="contactUs.html">Contact Us</a>
             </button>
         </div>
               
